fix z-index

--- a/app/blocks/tag-content/tag-content.scss
+++ b/app/blocks/tag-content/tag-content.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 13px;
   right: 0;
+  z-index: 1;
 
   &__text {
     font-size: 13px;
